--- a/dsp/soundimage/srsfx_trumedia_voice.cfg
+++ b/dsp/soundimage/srsfx_trumedia_voice.cfg
@@ -9,10 +9,10 @@
 	srs_route_out:bt_sco =	-1	// DEVICE_OUT_BLUETOOTH_SCO - 
 	srs_route_out:bt_sco_headset =	-1	// DEVICE_OUT_BLUETOOTH_SCO_HEADSET - 
 	srs_route_out:bt_sco_carkit =	-1	// DEVICE_OUT_BLUETOOTH_SCO_CARKIT - 
-	srs_route_out:bt_a2dp =	2	// DEVICE_OUT_BLUETOOTH_A2DP - 
-	srs_route_out:bt_a2dp_carkit =	3	// DEVICE_OUT_BLUETOOTH_A2DP_HEADPHONES - 
+	srs_route_out:bt_a2dp =	-1	// DEVICE_OUT_BLUETOOTH_A2DP - 
+	srs_route_out:bt_a2dp_carkit =	-1	// DEVICE_OUT_BLUETOOTH_A2DP_HEADPHONES - 
 	srs_route_out:bt_a2dp_speaker =	-1	// DEVICE_OUT_BLUETOOTH_A2DP_SPEAKER - 
-	srs_route_out:aux_digital =	4	// DEVICE_OUT_AUX_DIGITAL - 
+	srs_route_out:aux_digital =	-1	// DEVICE_OUT_AUX_DIGITAL - 
 
 
 //=-=-=-=-=-=-=-=-=-=-=-=-
@@ -23,32 +23,32 @@
 	srs_wowhd_0:wowhd_trubass_enable =	1	// TruBass Toggle - toggle
 	srs_wowhd_0:wowhd_trubass_min =	0.000	// TruBass Min - control
 	srs_wowhd_0:wowhd_trubass_window =	1.000	// TruBass Window - control
-	srs_wowhd_0:wowhd_trubass_slide =	0.500	// TruBass Slider - control
+	srs_wowhd_0:wowhd_trubass_slide =	0.400	// TruBass Slider - control
 	srs_wowhd_0:wowhd_trubass_compressor =	0.280	// TruBass Compressor - control (Max:1)
-	srs_wowhd_0:wowhd_trubass_size =	600	// TruBass Speaker Size - frequency (Max:600)
-	srs_wowhd_0:wowhd_trubass_analysis =	300	// TruBass Analysis Size - frequency
+	srs_wowhd_0:wowhd_trubass_size =	500	// TruBass Speaker Size - frequency (Max:600)
+	srs_wowhd_0:wowhd_trubass_analysis =	200	// TruBass Analysis Size - frequency
 	srs_wowhd_0:wowhd_trubass_mode =	0	// TruBass Mode - enum (Mono,Stereo) 
 	srs_wowhd_0:wowhd_xover_order =	4	// XOver Filters Order - (Max:6)
-	srs_wowhd_0:wowhd_xover_freq =	800	// XOver Filter Frequency - frequency (A little below speaker fo)
+	srs_wowhd_0:wowhd_xover_freq =	700	// XOver Filter Frequency - frequency (A little below speaker fo)
 	srs_wowhd_0:wowhd_hpf_enable =	1	// HiPass Filter Toggle - toggle
 	srs_wowhd_0:wowhd_hpf_order =	4	// HiPass Filters Order - (Max:6)
-	srs_wowhd_0:wowhd_hpf_freq =	150	// HiPass Filter Frequency - frequency
+	srs_wowhd_0:wowhd_hpf_freq =	250	// HiPass Filter Frequency - frequency
 	srs_wowhd_0:wowhd_srs_enable =	1	// SRS3D Toggle - toggle
 	srs_wowhd_0:wowhd_srs_space =	0.700	// SRS3D Space - control
-	srs_wowhd_0:wowhd_srs_center =	0.600	// SRS3D Center - control
+	srs_wowhd_0:wowhd_srs_center =	0.460	// SRS3D Center - control
 	srs_wowhd_0:wowhd_srs_mode =	2	// SRS3D Mode - enum (Mono,Single Speaker,Stereo,Extreme)
 	srs_wowhd_0:wowhd_srs_speaker =	0	// SRS3D Speaker Type - enum (Speaker,Headphone)
 	srs_wowhd_0:wowhd_focus_enable =	1	// Focus Toggle - toggle
-	srs_wowhd_0:wowhd_focus =	0.400	// Focus - control
+	srs_wowhd_0:wowhd_focus =	0.320	// Focus - control
 	srs_wowhd_0:wowhd_definition_enable =	0	// Definition Toggle - toggle
 	srs_wowhd_0:wowhd_definition_min =	0.000	// Definition Min - control
 	srs_wowhd_0:wowhd_definition_window =	1.000	// Definition Window - control
-	srs_wowhd_0:wowhd_definition_slide =	0.100	// Definition Slide - control
+	srs_wowhd_0:wowhd_definition_slide =	0.070	// Definition Slide - control
 	srs_wowhd_0:wowhd_widesur_enable =	0	// WideSurround Toggle - toggle (Widesurround sound level is lower)
 	srs_wowhd_0:wowhd_widesur_igain =	1.000	// WideSurround Input Gain - gain (no need reduce)
 	srs_wowhd_0:wowhd_widesur_centerboost =	0.700	// WideSurround Center Boost - gain(For reduce:0.5->-6)
 	srs_wowhd_0:wowhd_widesur_separation =	0.100	// WideSurround Speaker Separation - control(1:physical far)
-	srs_wowhd_0:wowhd_skip =	0	// Skips WOWHD when true - toggle
+	srs_wowhd_0:wowhd_skip =	1	// Skips WOWHD when true - toggle
 
 
 //=-=-=-=-=-=-=-=-=-=-=-=-
@@ -84,22 +84,22 @@
 	srs_trueq_0:trueq_left_enable = 1	// TruEQ Left Toggle - toggle
 	srs_trueq_0:trueq_lband0_enable =	1	// TruEQ Left Band 0 Toggle - toggle
 	srs_trueq_0:trueq_lband1_enable =	1	// TruEQ Left Band 1 Toggle - toggle
-	srs_trueq_0:trueq_lband2_enable =	1	// TruEQ Left Band 2 Toggle - toggle
-	srs_trueq_0:trueq_lband3_enable =	1	// TruEQ Left Band 3 Toggle - toggle
+	srs_trueq_0:trueq_lband2_enable =	0	// TruEQ Left Band 2 Toggle - toggle
+	srs_trueq_0:trueq_lband3_enable =	0	// TruEQ Left Band 3 Toggle - toggle
 	srs_trueq_0:trueq_right_enable =	1	// TruEQ Right Toggle - toggle
 	srs_trueq_0:trueq_rband0_enable =	1	// TruEQ Right Band 0 Toggle - toggle
 	srs_trueq_0:trueq_rband1_enable =	1	// TruEQ Right Band 1 Toggle - toggle
-	srs_trueq_0:trueq_rband2_enable =	1	// TruEQ Right Band 2 Toggle - toggle
-	srs_trueq_0:trueq_rband3_enable =	1	// TruEQ Right Band 3 Toggle - toggle
-	srs_trueq_0:trueq_lband0 =	10000.000000,-4.000000,3.000000	// TruEQ Left Band 0 Tuning (CF Gain Q) - 
-	srs_trueq_0:trueq_lband1 =	300.000000,-8.000000,3.000000	// TruEQ Left Band 1 Tuning - 
-	srs_trueq_0:trueq_lband2 =	7000.000000,-8.000000,3.000000	// TruEQ Left Band 2 Tuning - 
-	srs_trueq_0:trueq_lband3 =	4000.000000,-10.000000,3.000000	// TruEQ Left Band 3 Tuning - 
-	srs_trueq_0:trueq_rband0 =	10000.000000,-4.000000,3.000000	// TruEQ Right Band 0 Tuning - 
-	srs_trueq_0:trueq_rband1 =	300.000000,-8.000000,3.000000	// TruEQ Right Band 1 Tuning - 
-	srs_trueq_0:trueq_rband2 =	7000.000000,-8.000000,3.000000	// TruEQ Right Band 2 Tuning - 
-	srs_trueq_0:trueq_rband3 =	4000.000000,-10.000000,3.000000	// TruEQ Right Band 3 Tuning - 
-	srs_trueq_0:trueq_skip =	1	// Skips TruEQ when true - toggle
+	srs_trueq_0:trueq_rband2_enable =	0	// TruEQ Right Band 2 Toggle - toggle
+	srs_trueq_0:trueq_rband3_enable =	0	// TruEQ Right Band 3 Toggle - toggle
+	srs_trueq_0:trueq_lband0 =	3500.000000,6.000000,2.000000	// TruEQ Left Band 0 Tuning (CF Gain Q) - 
+	srs_trueq_0:trueq_lband1 =	2500.000000,6.000000,2.000000	// TruEQ Left Band 1 Tuning - 
+	srs_trueq_0:trueq_lband2 =	0.000000,0.000000,1.000000	// TruEQ Left Band 2 Tuning - 
+	srs_trueq_0:trueq_lband3 =	0.000000,0.000000,1.000000	// TruEQ Left Band 3 Tuning - 
+	srs_trueq_0:trueq_rband0 =	3500.000000,6.000000,2.000000	// TruEQ Right Band 0 Tuning - 
+	srs_trueq_0:trueq_rband1 =	2500.000000,6.000000,2.000000	// TruEQ Right Band 1 Tuning - 
+	srs_trueq_0:trueq_rband2 =	0.000000,0.000000,1.000000	// TruEQ Right Band 2 Tuning - 
+	srs_trueq_0:trueq_rband3 =	0.000000,0.000000,1.000000	// TruEQ Right Band 3 Tuning - 
+	srs_trueq_0:trueq_skip =	0	// Skips TruEQ when true - toggle
 
 
 //=-=-=-=-=-=-=-=-=-=-=-=-
@@ -110,7 +110,7 @@
 	srs_hlimit_0:hlimit_bgain =	1.000	// Bypass Gain - gain
 	srs_hlimit_0:hlimit_delaylen =	22	// Length of the Delay Line - length (Max:30)
 	srs_hlimit_0:hlimit_decaysmooth =	1	// Toggles use of smoothing on Decay - toggle
-	srs_hlimit_0:hlimit_boost =	4.000	// Boost - gain (20log(boost))
+	srs_hlimit_0:hlimit_boost =	1.000	// Boost - gain (20log(boost))
 	srs_hlimit_0:hlimit_limit =	1.000	// Limit - control (1 for 0dB)
 	srs_hlimit_0:hlimit_skip =	0	// Skips Hard Limiter when true - toggle
 
@@ -123,32 +123,32 @@
 	srs_wowhd_1:wowhd_trubass_enable =	1	// TruBass Toggle - toggle
 	srs_wowhd_1:wowhd_trubass_min =	0.000	// TruBass Min - control
 	srs_wowhd_1:wowhd_trubass_window =	1.000	// TruBass Window - control
-	srs_wowhd_1:wowhd_trubass_slide =	0.700	// TruBass Slider - control
-	srs_wowhd_1:wowhd_trubass_compressor =	0.250	// TruBass Compressor - control
+	srs_wowhd_1:wowhd_trubass_slide =	0.660	// TruBass Slider - control
+	srs_wowhd_1:wowhd_trubass_compressor =	0.280	// TruBass Compressor - control
 	srs_wowhd_1:wowhd_trubass_size =	100	// TruBass Speaker Size - frequency
 	srs_wowhd_1:wowhd_trubass_analysis =	70	// TruBass Analysis Size - frequency
 	srs_wowhd_1:wowhd_trubass_mode =	1	// TruBass Mode - enum (Mono,Stereo)
 	srs_wowhd_1:wowhd_xover_order =	4	// XOver Filters Order - 
 	srs_wowhd_1:wowhd_xover_freq =	300	// XOver Filter Frequency - frequency
 	srs_wowhd_1:wowhd_hpf_enable =	0	// HiPass Filter Toggle - toggle
-	srs_wowhd_1:wowhd_hpf_order =	2	// HiPass Filters Order - 
+	srs_wowhd_1:wowhd_hpf_order =	4	// HiPass Filters Order - 
 	srs_wowhd_1:wowhd_hpf_freq =	40	// HiPass Filter Frequency - frequency
 	srs_wowhd_1:wowhd_srs_enable =	1	// SRS3D Toggle - toggle
-	srs_wowhd_1:wowhd_srs_space =	0.800	// SRS3D Space - control
+	srs_wowhd_1:wowhd_srs_space =	0.850	// SRS3D Space - control
 	srs_wowhd_1:wowhd_srs_center =	0.500	// SRS3D Center - control
 	srs_wowhd_1:wowhd_srs_mode =	2	// SRS3D Mode - enum (Mono,Single Speaker,Stereo,Extreme)
-	srs_wowhd_1:wowhd_srs_speaker =	1	// SRS3D Speaker Type - enum (Speaker,Headphone)
+	srs_wowhd_1:wowhd_srs_speaker =	0	// SRS3D Speaker Type - enum (Speaker,Headphone)
 	srs_wowhd_1:wowhd_focus_enable =	1	// Focus Toggle - toggle
-	srs_wowhd_1:wowhd_focus =	0.150	// Focus - control
+	srs_wowhd_1:wowhd_focus =	0.200	// Focus - control
 	srs_wowhd_1:wowhd_definition_enable =	1	// Definition Toggle - toggle
 	srs_wowhd_1:wowhd_definition_min =	0.000	// Definition Min - control
 	srs_wowhd_1:wowhd_definition_window =	1.000	// Definition Window - control
-	srs_wowhd_1:wowhd_definition_slide =	0.050	// Definition Slide - control
+	srs_wowhd_1:wowhd_definition_slide =	0.150	// Definition Slide - control
 	srs_wowhd_1:wowhd_widesur_enable =	0	// WideSurround Toggle - toggle
 	srs_wowhd_1:wowhd_widesur_igain =	1.000	// WideSurround Input Gain - gain
 	srs_wowhd_1:wowhd_widesur_centerboost =	1.000	// WideSurround Center Boost - gain
 	srs_wowhd_1:wowhd_widesur_separation =	1.000	// WideSurround Speaker Separation - control
-	srs_wowhd_1:wowhd_skip =	0	// Skips WOWHD when true - toggle
+	srs_wowhd_1:wowhd_skip =	1	// Skips WOWHD when true - toggle
 
 
 //=-=-=-=-=-=-=-=-=-=-=-=-
@@ -184,20 +184,20 @@
 	srs_trueq_1:trueq_left_enable =	1	// TruEQ Left Toggle - toggle
 	srs_trueq_1:trueq_lband0_enable =	1	// TruEQ Left Band 0 Toggle - toggle
 	srs_trueq_1:trueq_lband1_enable =	0	// TruEQ Left Band 1 Toggle - toggle
-	srs_trueq_1:trueq_lband2_enable =	1	// TruEQ Left Band 2 Toggle - toggle
+	srs_trueq_1:trueq_lband2_enable =	0	// TruEQ Left Band 2 Toggle - toggle
 	srs_trueq_1:trueq_lband3_enable =	0	// TruEQ Left Band 3 Toggle - toggle
 	srs_trueq_1:trueq_right_enable =	1	// TruEQ Right Toggle - toggle
 	srs_trueq_1:trueq_rband0_enable =	1	// TruEQ Right Band 0 Toggle - toggle
 	srs_trueq_1:trueq_rband1_enable =	0	// TruEQ Right Band 1 Toggle - toggle
-	srs_trueq_1:trueq_rband2_enable =	1	// TruEQ Right Band 2 Toggle - toggle
+	srs_trueq_1:trueq_rband2_enable =	0	// TruEQ Right Band 2 Toggle - toggle
 	srs_trueq_1:trueq_rband3_enable =	0	// TruEQ Right Band 3 Toggle - toggle
-	srs_trueq_1:trueq_lband0 =	25.000000,-2.000000,1.000000	// TruEQ Left Band 0 Tuning (CF Gain Q) - 
-	srs_trueq_1:trueq_lband1 =	2000.000000,3.000000,1.000000	// TruEQ Left Band 1 Tuning - 
-	srs_trueq_1:trueq_lband2 =	20000.000000,4.000000,3.000000	// TruEQ Left Band 2 Tuning - 
+	srs_trueq_1:trueq_lband0 =	3000.000000,6.000000,2.000000	// TruEQ Left Band 0 Tuning (CF Gain Q) - 
+	srs_trueq_1:trueq_lband1 =	0.000000,0.000000,2.000000	// TruEQ Left Band 1 Tuning - 
+	srs_trueq_1:trueq_lband2 =	0.000000,0.000000,2.000000	// TruEQ Left Band 2 Tuning - 
 	srs_trueq_1:trueq_lband3 =	0.000000,0.000000,2.000000	// TruEQ Left Band 3 Tuning - 
-	srs_trueq_1:trueq_rband0 =	25.000000,-2.000000,1.000000	// TruEQ Right Band 0 Tuning - 
-	srs_trueq_1:trueq_rband1 =	2000.000000,3.000000,1.000000	// TruEQ Right Band 1 Tuning - 
-	srs_trueq_1:trueq_rband2 =	20000.000000,4.000000,3.000000	// TruEQ Right Band 2 Tuning - 
+	srs_trueq_1:trueq_rband0 =	3000.000000,6.000000,2.000000	// TruEQ Right Band 0 Tuning - 
+	srs_trueq_1:trueq_rband1 =	0.000000,0.000000,2.000000	// TruEQ Right Band 1 Tuning - 
+	srs_trueq_1:trueq_rband2 =	0.000000,0.000000,2.000000	// TruEQ Right Band 2 Tuning - 
 	srs_trueq_1:trueq_rband3 =	0.000000,0.000000,2.000000	// TruEQ Right Band 3 Tuning - 
 	srs_trueq_1:trueq_skip =	0	// Skips TruEQ when true - toggle
 
@@ -210,7 +210,7 @@
 	srs_hlimit_1:hlimit_bgain =	1.000	// Bypass Gain - gain
 	srs_hlimit_1:hlimit_delaylen =	22	// Length of the Delay Line - length
 	srs_hlimit_1:hlimit_decaysmooth =	1	// Toggles use of smoothing on Decay - toggle
-	srs_hlimit_1:hlimit_boost =	1.700	// Boost - gain
+	srs_hlimit_1:hlimit_boost =	1.000	// Boost - gain
 	srs_hlimit_1:hlimit_limit =	1.000	// Limit - control
 	srs_hlimit_1:hlimit_skip =	0	// Skips Hard Limiter when true - toggle
 
@@ -223,27 +223,27 @@
 	srs_wowhd_2:wowhd_trubass_enable =	1	// TruBass Toggle - toggle
 	srs_wowhd_2:wowhd_trubass_min =	0.000	// TruBass Min - control
 	srs_wowhd_2:wowhd_trubass_window =	1.000	// TruBass Window - control
-	srs_wowhd_2:wowhd_trubass_slide =	0.620	// TruBass Slider - control
-	srs_wowhd_2:wowhd_trubass_compressor =	0.250	// TruBass Compressor - control
-	srs_wowhd_2:wowhd_trubass_size =	100	// TruBass Speaker Size - frequency
-	srs_wowhd_2:wowhd_trubass_analysis =	70	// TruBass Analysis Size - frequency
+	srs_wowhd_2:wowhd_trubass_slide =	0.700	// TruBass Slider - control
+	srs_wowhd_2:wowhd_trubass_compressor =	0.280	// TruBass Compressor - control
+	srs_wowhd_2:wowhd_trubass_size =	80	// TruBass Speaker Size - frequency
+	srs_wowhd_2:wowhd_trubass_analysis =	60	// TruBass Analysis Size - frequency
 	srs_wowhd_2:wowhd_trubass_mode =	1	// TruBass Mode - enum (Mono,Stereo)
 	srs_wowhd_2:wowhd_xover_order =	4	// XOver Filters Order - 
 	srs_wowhd_2:wowhd_xover_freq =	300	// XOver Filter Frequency - frequency
 	srs_wowhd_2:wowhd_hpf_enable =	0	// HiPass Filter Toggle - toggle
-	srs_wowhd_2:wowhd_hpf_order =	2	// HiPass Filters Order - 
+	srs_wowhd_2:wowhd_hpf_order =	4	// HiPass Filters Order - 
 	srs_wowhd_2:wowhd_hpf_freq =	40	// HiPass Filter Frequency - frequency
 	srs_wowhd_2:wowhd_srs_enable =	1	// SRS3D Toggle - toggle
-	srs_wowhd_2:wowhd_srs_space =	0.700	// SRS3D Space - control
-	srs_wowhd_2:wowhd_srs_center =	0.500	// SRS3D Center - control
+	srs_wowhd_2:wowhd_srs_space =	0.800	// SRS3D Space - control
+	srs_wowhd_2:wowhd_srs_center =	0.550	// SRS3D Center - control
 	srs_wowhd_2:wowhd_srs_mode =	2	// SRS3D Mode - enum (Mono,Single Speaker,Stereo,Extreme)
-	srs_wowhd_2:wowhd_srs_speaker =	1	// SRS3D Speaker Type - enum (Speaker,Headphone)
+	srs_wowhd_2:wowhd_srs_speaker =	0	// SRS3D Speaker Type - enum (Speaker,Headphone)
 	srs_wowhd_2:wowhd_focus_enable =	1	// Focus Toggle - toggle
-	srs_wowhd_2:wowhd_focus =	0.150	// Focus - control
+	srs_wowhd_2:wowhd_focus =	0.200	// Focus - control
 	srs_wowhd_2:wowhd_definition_enable =	1	// Definition Toggle - toggle
 	srs_wowhd_2:wowhd_definition_min =	0.000	// Definition Min - control
 	srs_wowhd_2:wowhd_definition_window =	1.000	// Definition Window - control
-	srs_wowhd_2:wowhd_definition_slide =	0.100	// Definition Slide - control
+	srs_wowhd_2:wowhd_definition_slide =	0.050	// Definition Slide - control
 	srs_wowhd_2:wowhd_widesur_enable =	0	// WideSurround Toggle - toggle
 	srs_wowhd_2:wowhd_widesur_igain =	1.000	// WideSurround Input Gain - gain
 	srs_wowhd_2:wowhd_widesur_centerboost =	1.000	// WideSurround Center Boost - gain
@@ -281,25 +281,25 @@
 	srs_trueq_2:trueq_igain =	1.000	// TruEQ Input Gain - gain
 	srs_trueq_2:trueq_ogain =	1.000	// TruEQ Output Gain - gain
 	srs_trueq_2:trueq_bgain =	1.000	// TruEQ Bypass Gain - gain
-	srs_trueq_2:trueq_left_enable =	1	// TruEQ Left Toggle - toggle
-	srs_trueq_2:trueq_lband0_enable =	1	// TruEQ Left Band 0 Toggle - toggle
+	srs_trueq_2:trueq_left_enable =	0	// TruEQ Left Toggle - toggle
+	srs_trueq_2:trueq_lband0_enable =	0	// TruEQ Left Band 0 Toggle - toggle
 	srs_trueq_2:trueq_lband1_enable =	0	// TruEQ Left Band 1 Toggle - toggle
-	srs_trueq_2:trueq_lband2_enable =	1	// TruEQ Left Band 2 Toggle - toggle
+	srs_trueq_2:trueq_lband2_enable =	0	// TruEQ Left Band 2 Toggle - toggle
 	srs_trueq_2:trueq_lband3_enable =	0	// TruEQ Left Band 3 Toggle - toggle
-	srs_trueq_2:trueq_right_enable =	1	// TruEQ Right Toggle - toggle
-	srs_trueq_2:trueq_rband0_enable =	1	// TruEQ Right Band 0 Toggle - toggle
+	srs_trueq_2:trueq_right_enable =	0	// TruEQ Right Toggle - toggle
+	srs_trueq_2:trueq_rband0_enable =	0	// TruEQ Right Band 0 Toggle - toggle
 	srs_trueq_2:trueq_rband1_enable =	0	// TruEQ Right Band 1 Toggle - toggle
-	srs_trueq_2:trueq_rband2_enable =	1	// TruEQ Right Band 2 Toggle - toggle
+	srs_trueq_2:trueq_rband2_enable =	0	// TruEQ Right Band 2 Toggle - toggle
 	srs_trueq_2:trueq_rband3_enable =	0	// TruEQ Right Band 3 Toggle - toggle
-	srs_trueq_2:trueq_lband0 =	25.000000,-2.000000,1.000000	// TruEQ Left Band 0 Tuning (CF Gain Q) - 
-	srs_trueq_2:trueq_lband1 =	2000.000000,3.000000,1.000000	// TruEQ Left Band 1 Tuning - 
-	srs_trueq_2:trueq_lband2 =	20000.000000,4.000000,3.000000	// TruEQ Left Band 2 Tuning - 
+	srs_trueq_2:trueq_lband0 =	0.000000,0.000000,2.000000	// TruEQ Left Band 0 Tuning (CF Gain Q) - 
+	srs_trueq_2:trueq_lband1 =	0.000000,0.000000,2.000000	// TruEQ Left Band 1 Tuning - 
+	srs_trueq_2:trueq_lband2 =	0.000000,0.000000,2.000000	// TruEQ Left Band 2 Tuning - 
 	srs_trueq_2:trueq_lband3 =	0.000000,0.000000,2.000000	// TruEQ Left Band 3 Tuning - 
-	srs_trueq_2:trueq_rband0 =	25.000000,-2.000000,1.000000	// TruEQ Right Band 0 Tuning - 
-	srs_trueq_2:trueq_rband1 =	2000.000000,3.000000,1.000000	// TruEQ Right Band 1 Tuning - 
-	srs_trueq_2:trueq_rband2 =	20000.000000,4.000000,3.000000	// TruEQ Right Band 2 Tuning - 
+	srs_trueq_2:trueq_rband0 =	0.000000,0.000000,2.000000	// TruEQ Right Band 0 Tuning - 
+	srs_trueq_2:trueq_rband1 =	0.000000,0.000000,2.000000	// TruEQ Right Band 1 Tuning - 
+	srs_trueq_2:trueq_rband2 =	0.000000,0.000000,2.000000	// TruEQ Right Band 2 Tuning - 
 	srs_trueq_2:trueq_rband3 =	0.000000,0.000000,2.000000	// TruEQ Right Band 3 Tuning - 
-	srs_trueq_2:trueq_skip =	0	// Skips TruEQ when true - toggle
+	srs_trueq_2:trueq_skip =	1	// Skips TruEQ when true - toggle
 
 
 //=-=-=-=-=-=-=-=-=-=-=-=-
@@ -310,7 +310,7 @@
 	srs_hlimit_2:hlimit_bgain =	1.000	// Bypass Gain - gain
 	srs_hlimit_2:hlimit_delaylen =	22	// Length of the Delay Line - length
 	srs_hlimit_2:hlimit_decaysmooth =	1	// Toggles use of smoothing on Decay - toggle
-	srs_hlimit_2:hlimit_boost =	1.300	// Boost - gain
+	srs_hlimit_2:hlimit_boost =	1.200	// Boost - gain
 	srs_hlimit_2:hlimit_limit =	1.000	// Limit - control
 	srs_hlimit_2:hlimit_skip =	0	// Skips Hard Limiter when true - toggle
 
