Add external SD to init

--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -1,6 +1,11 @@
 import init.vigor.usb.rc
 
 on early-init
+    # external sdcard
+    export SECONDARY_STORAGE /mnt/sdcard2
+    mkdir /mnt/sdcard2 0000 system system
+    symlink /mnt/sdcard2 /sdcard2
+    # internal sd on emmc
     export EXTERNAL_STORAGE /mnt/sdcard
     mkdir /mnt/sdcard 0000 system system
     symlink /mnt/sdcard /sdcard
