--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -8,24 +8,22 @@ on early-init
     # internal sd on emmc
     export EXTERNAL_STORAGE /mnt/sdcard
     mkdir /mnt/sdcard 0000 system system
+    # for backwards compatibility
     symlink /mnt/sdcard /sdcard
 
 on early-fs
     mkdir /system
     mkdir /data 0771 system system
-    mkdir /cache 0770 system cache
+    mkdir /cache 0771 system cache
     mkdir /devlog 0700 root root
     
-    mount ext4 /dev/block/mmcblk0p29 /system wait ro
-    mount ext4 /dev/block/mmcblk0p35 /data wait noatime nosuid nodev nodelalloc
-    mount ext4 /dev/block/mmcblk0p36 /cache wait noatime nosuid nodev nodelalloc
-    mount ext4 /dev/block/mmcblk0p30 /devlog wait noatime nosuid nodev nodelalloc
+    mount ext4 /dev/block/mmcblk0p29 /system wait ro data=ordered noauto_da_alloc
+    mount ext4 /dev/block/mmcblk0p35 /data wait noatime nosuid nodev data=ordered noauto_da_alloc
+    mount ext4 /dev/block/mmcblk0p36 /cache wait noatime nosuid nodev data=ordered noauto_da_alloc
+    mount ext4 /dev/block/mmcblk0p30 /devlog wait noatime nosuid nodev data=ordered noauto_da_alloc
     
-    chown radio diag /dev/block/mmcblk0p16
-    chmod 0460 /dev/block/mmcblk0p16    
-
-    rm /vendor
     # 8x60: mount radio partition and create links for modem/q6 firmwares
+    rm /vendor
     mkdir /vendor               0771 system system
     mkdir /vendor/etc           0771 system system
     mkdir /vendor/firmware      0771 system system
@@ -58,8 +56,8 @@ on early-fs
     symlink /vendor/firmware/misc/modem.b01 /vendor/firmware/modem.b01
     symlink /vendor/firmware/misc/modem.b00 /vendor/firmware/modem.b00
     symlink /vendor/firmware/misc/modem.mdt /vendor/firmware/modem.mdt
-
     mkdir /vendor/firmware/misc_mdm 0771 system system
+
     mount vfat /dev/block/mmcblk0p18 /vendor/firmware/misc_mdm wait ro shortname=lower
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/dsp1.mbn /vendor/firmware/dsp1.mbn
@@ -71,20 +69,28 @@ on early-fs
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/htcssmem.mbn /vendor/firmware/htcssmem.mbn
 
-    chown system system /vendor/firmware
-    chmod 0771 /vendor/firmware 
-
-on post-fs
+on post-fs-data
     wait /dev/ttyHSL1
     mkdir /data/qcks 0770 system system
-
-    mkdir /data/radio 0770 radio radio
-    chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
-    chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
 
     # double check the perms and set owner
     chown root root /devlog
     chmod 0700 /devlog
+
+    remount rootfs rootfs / remount
+
+    # wifi
+    mkdir /data/misc/wifi 0770 wifi wifi
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/wifi/hostapd 0770 wifi wifi
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+    chown dhcp dhcp /data/misc/dhcp
+
+    # audio
+    mkdir /data/audio 0770 media audio
+
+    # radio
+    mkdir /data/radio 0770 radio radio
 
     # for Invense MPU3050
     chmod 0664 /dev/mpu
@@ -94,24 +100,10 @@ on post-fs
     chown system system /dev/mpuirq
     chown system system /dev/timerirq
 
-    symlink /mnt/sdcard/ext_sd /sdcard2
+    # Set indication (checked by vold) that we have finished this action
+    setprop vold.post_fs_done 1
 
-    #WIFI
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
-    mkdir /data/d 0777 system system
-    mount debugfs /data/d /data/d
-
-    # for universal log tool
-    mkdir /data/misc/cw 0770 system system
-
-# I-Mz add for SVLTE GPS daemon and related folder from QCT fusion ++
-    mkdir /data/misc/gpsone_d 0770 system qcom_oncrpc
-#   chown system system /system/bin/gpsone_daemon
-# I-Mz add for SVLTE GPS daemon and related folder from QCT fusion --
-
+on init
     # bluetooth power up/down interface
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
@@ -120,16 +112,6 @@ on post-fs
     # bluetooth MAC address programming
     chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddr
     setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddr
-
-    # allow system to modify ksm control files
-    chown root system /sys/kernel/mm/ksm/pages_to_scan
-    chmod 0664 /sys/kernel/mm/ksm/pages_to_scan
-    chown root system /sys/kernel/mm/ksm/sleep_millisecs
-    chmod 0664 /sys/kernel/mm/ksm/sleep_millisecs
-    chown root system /sys/kernel/mm/ksm/run
-    chmod 0664 /sys/kernel/mm/ksm/run
-    write /sys/kernel/mm/ksm/sleep_millisecs 1500
-    write /sys/kernel/mm/ksm/pages_to_scan 256
 
     # Permissions for Liblights.
     chown system system /sys/class/leds/green/brightness
@@ -141,70 +123,100 @@ on post-fs
 
     # flashlight
     chown system camera /sys/class/leds/flashlight/brightness
-    chmod 0660          /sys/class/leds/flashlight/brightness
+    chmod 0666          /sys/class/leds/flashlight/brightness
 
+    # symlink for HDMI
+    symlink /dev/graphics/fb1 /dev/graphics/hdmi
 
-	# for wireless modem
-	chown system system /sys/module/serial/parameters/modem_enabled
-	chown system system /dev/ttyHSUSB0
-	chown system system /dev/ttySA0
-	chown system system /dev/smd9
+    # for wireless modem
+    chown system system /sys/module/serial/parameters/modem_enabled
+    chown system system /dev/ttyHSUSB0
+    chown system system /dev/ttySA0
+    chown system system /dev/smd9
 
-	# for Flip to speaker
-	chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
-	chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
+    # for Flip to speaker
+    chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
+    chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
 
-	# for Optical sensors
-	chown system system /sys/class/optical_sensors/lightsensor/ls_adc
-	chown system system /sys/class/optical_sensors/lightsensor/ls_auto
-	chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
-	chown system radio /sys/class/optical_sensors/proximity/ps_adc
-	chown system system /sys/class/optical_sensors/proximity/ps_kadc
-	chown system system /sys/class/optical_sensors/proximity/ps_led
-	chown system system /sys/class/optical_sensors/proximity/ps_test_mode
+    # for Optical sensors
+    chown system system /sys/class/optical_sensors/lightsensor/ls_adc
+    chown system system /sys/class/optical_sensors/lightsensor/ls_auto
+    chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
+    chown system radio /sys/class/optical_sensors/proximity/ps_adc
+    chown system system /sys/class/optical_sensors/proximity/ps_kadc
+    chown system system /sys/class/optical_sensors/proximity/ps_led
+    chown system system /sys/class/optical_sensors/proximity/ps_test_mode
 
-	# for simlock
-	chown radio radio /dev/simlock
-	chmod 0660 /dev/simlock
+    # for CM performance
+    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_frequencies
+    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_governors
+    chown root system /sys/devices/system/cpu/cpu0/cpufreq/scaling_cur_freq
+    chown root system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
 
-	# for charging function
-	chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
-	chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
+    # for simlock
+    chown radio radio /dev/simlock
+    chmod 0660 /dev/simlock
 
-    # for Slate charging timer
-	chown radio /sys/class/power_supply/battery/charger_timer
+    # for charging function
+    chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
+    chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
+    chown radio radio /sys/class/power_supply/battery/charger_control
+    chmod 0660 /sys/class/power_supply/battery/charger_control
+    chown radio /sys/class/power_supply/battery/charger_timer
+    chown radio radio /sys/class/power_supply/battery/phone_call
+    chown radio radio /sys/class/power_supply/battery/network_search
 
-# HTC SSD Peripheral Touch - START
-    chown system system /sys/android_touch/unlock
-# HTC SSD Peripheral UI -END
+    # Chown polling nodes as needed from UI running on system server
+    chown system system /persist
+    chmod 0771 /persist
+    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
+    chown system system /sys/devices/platform/msm_sdcc.1/polling
+    chown system system /sys/devices/platform/msm_sdcc.2/polling
+    chown system system /sys/devices/platform/msm_sdcc.3/polling
+    chown system system /sys/devices/platform/msm_sdcc.4/polling
 
-# HTC SSD USB
-    chown system system /sys/class/android_usb/f_modem/on
-    chown system system /sys/class/android_usb/f_diag/on
-    chown system system /sys/class/android_usb/f_rmnet/on
+    chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
-# set diag permissions
-    chown radio radio /dev/diag
-    chown radio radio /dev/diag_mdm
-    chown radio radio /dev/htcdiag
-    chown radio radio /dev/diag_arm9
-    chown radio radio /dev/btdiag
-    chmod 0660 /dev/diag
-    chmod 0660 /dev/diag_mdm
-    chmod 0660 /dev/htcdiag
-    chmod 0660 /dev/diag_arm9
-    chmod 0660 /dev/btdiag
+on boot
+    # allow interfaces to get v6 address when tethering is enabled
+    write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet2/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet3/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet4/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet5/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet6/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet7/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio0/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio1/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio2/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio3/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio4/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio5/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio6/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet_sdio7/accept_ra 2
 
+    # Define TCP buffer sizes for various networks
     setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
-    setprop net.tcp.buffersize.wifi    524288,1048576,2097152,262144,524288,1048576
-    setprop net.tcp.buffersize.lte     524288,1048576,2097152,262144,524288,1048576
-    setprop net.tcp.buffersize.umts    4094,87380,110208,4096,16384,110208
-    setprop net.tcp.buffersize.hspa    4094,87380,262144,4096,16384,262144
-    setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
-    setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
+    setprop net.tcp.buffersize.wifi    4096,221184,3461120,4096,221184,3461120
+    setprop net.tcp.buffersize.hsdpa   4094,87380,704512,4096,16384,110208
+    setprop net.tcp.buffersize.umts    4094,87380,704512,4096,16384,110208
+    setprop net.tcp.buffersize.edge    4093,26280,704512,4096,16384,35040
+    setprop net.tcp.buffersize.gprs    4092,8760,704512,4096,8760,11680
+    setprop net.tcp.buffersize.lte     4096,221184,3461120,4096,221184,3461120
+    setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
+    setprop net.tcp.buffersize.wimax   4096,1398102,2097152,4096,16384,110208
 
-    # for bridgemgr to inform the USB driver of the correct transport
-    chown radio radio /sys/class/android_usb/f_rmnet/transport
+    # Assign TCP buffer thresholds to be ceiling value of technology maximums
+    # Increased technology maximums should be reflected here.
+    write /proc/sys/net/core/rmem_max  3461120
+    write /proc/sys/net/core/wmem_max  3461120
+
+    # for slate charging timer
+    chown radio /sys/class/power_supply/battery/charger_timer
 
 # Force loading of modem and Q6 images
 service load-modem /system/bin/load-modem.sh
@@ -352,6 +364,7 @@ service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     disabled
 
 on property:init.svc.bootanim=stopped
+    start qcom-post-boot
     start thermald
     start mpdecision
 
@@ -378,5 +391,3 @@ service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k
     disabled
     oneshot
     ioprio idle 0
-
-
