--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -1,15 +1,14 @@
 import init.vigor.usb.rc
 
 on early-init
-    # external sdcard
-    export SECONDARY_STORAGE /mnt/sdcard2
-    mkdir /mnt/sdcard2 0000 system system
-    symlink /mnt/sdcard2 /sdcard2
-    # internal sd on emmc
     export EXTERNAL_STORAGE /mnt/sdcard
-    mkdir /mnt/sdcard 0000 system system
-    # for backwards compatibility
+    export SECONDARY_STORAGE /mnt/emmc
+
+    mkdir /mnt/sdcard 0775 system system
+    mkdir /mnt/emmc 0775 system system
+
     symlink /mnt/sdcard /sdcard
+    symlink /mnt/emmc /emmc
 
 on early-fs
     mkdir /system
