--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -2,7 +2,7 @@ import init.vigor.usb.rc
 
 on early-init
     export EXTERNAL_STORAGE /mnt/sdcard
-    mkdir /mnt/sdcard 0775 system system
+    mkdir /mnt/sdcard 0000 system system
     # for backwards compatibility
     symlink /mnt/sdcard /sdcard
 
@@ -89,6 +89,11 @@ on post-fs-data
 
     # radio
     mkdir /data/radio 0770 radio radio
+    chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
+    chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
+
+    # gpsone
+    mkdir /data/misc/gpsone_d 0770 system system
 
     # for Invense MPU3050
     chmod 0664 /dev/mpu
@@ -275,6 +280,7 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
 
 # bugreport is triggered by the KEY_VOLUMEUP and KEY_VOLUMEDOWN keycodes
 service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
+    class late_start
     disabled
     oneshot
     keycodes 114 115
@@ -290,27 +296,24 @@ service btld /system/bin/btld -lpm 1 -hb 3000000
 
 # for USB internet sharing
 service udhcpd /system/bin/udhcpd
-	disabled
-	oneshot
+    disabled
+    oneshot
 
 service netsharing_on /system/bin/netsharing net on
-	disabled
-	oneshot
+    disabled
+    oneshot
 
 service netsharing_off /system/bin/netsharing net off
-	disabled
-	oneshot
+    disabled
+    oneshot
 
 service netsharing_pass /system/bin/netsharing net_pass on
-	disabled
-	oneshot
-
-service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 /dev/block/mmcblk0p19 NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblk0p20
-    user root
     disabled
+    oneshot
 
-on property:ro.emmc=1
-    start rmt_storage
+service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 /dev/block/mmcblk0p19
+    class core
+    user root
 
 service dmagent /system/bin/dmagent -N -P19 -VSY
     socket dmagent stream 660 root radio
@@ -324,10 +327,18 @@ service modem /system/xbin/wireless_modem
     disabled
 
 on property:service.modem.enable=1
-	start modem
+    start modem
 
 on property:service.modem.enable=0
-	stop modem
+    stop modem
+
+service hdmid /system/bin/hdmid
+    class late_start
+    socket hdmid stream 0660 root system graphics
+    disabled
+
+on property:ro.hdmi.enable=true
+    start hdmid
 
 service bridgemgrd /system/bin/bridgemgrd
     class main
@@ -340,62 +351,64 @@ service qmiproxy /system/bin/qmiproxy
     group radio
 
 service qmuxd /system/bin/qmuxd
-    class main
+    class late_start
     user radio
-    group system radio inet
+    group radio audio bluetooth gps
 
 service netmgrd /system/bin/netmgrd
-    class main
+    class late_start
 
 on property:ro.use_data_netmgrd=false
     # netmgr not supported on specific target
     stop netmgrd
 
-service ril-daemon /system/bin/rild
-    class main
-    socket rild stream 660 root radio
-    socket rild-debug stream 660 radio system
-    user root
-    group radio cache inet misc audio qcom_oncrpc diag system
-
 service htcbatt /system/bin/htcbatt
-    class main
+    class late_start
     user root
 
 service thermald /system/bin/thermald
+    class main
     user root
+    group root
     disabled
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+service mpdecision /system/bin/mpdecision --no_sleep --avg_comp --single_core_while_panel_off
     class main
     user root
     disabled
 
 on property:init.svc.bootanim=stopped
     start qcom-post-boot
-    start thermald
-    start mpdecision
 
 service gpsone_daemon /system/bin/gpsone_daemon
     class main
     user root
-    group qcom_oncrpc
+    group radio audio bluetooth gps
 
 service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
     class main
     user root
     disabled
 
-service htc_ebdlogd /system/bin/htc_ebdlogd -s -k -P 7
-    class main
+service htc_ebdlogd /system/bin/htc_ebdlogd -s -k -P 7 -n 10 -N 10
     user root
     disabled
     oneshot
     ioprio idle 0
 
-service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k
-    class main
+service htc_ebdlogd_rel /system/bin/htc_ebdlogd -s -k -n 10 -N 10
     user root
     disabled
     oneshot
     ioprio idle 0
+
+on property:ro.build.tags=test-keys
+    start htc_ebdlogd
+
+on property:ro.build.tags=release-keys
+    start htc_ebdlogd_rel
+
+on property:sys.radio.shutdown=true
+    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
+    user root
+    group root
