--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -75,6 +75,8 @@ on post-fs-data
     chown root root /devlog
     chmod 0700 /devlog
 
+    mount rootfs rootfs / remount
+
     # wifi
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
