Init script updates
Change-Id: I36542741d9dfaa5939f1aaa63733d2183b8288a8

--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -1,3 +1,5 @@
+import init.vigor.usb.rc
+
 on early-fs
     mkdir /system
     mkdir /data 0771 system system
@@ -62,6 +64,8 @@ on post-fs
     wait /dev/ttyHSL1
     mkdir /data/qcks 0770 system system
 
+on post-fs-data
+    chown system system /sys/class/graphics/fb0/ratelimit
 
 on early-init
     mkdir /mnt/sdcard 0000 system system
