--- a/ramdisk/init.vigor.rc
+++ b/ramdisk/init.vigor.rc
@@ -68,14 +68,14 @@ on post-fs-data
     chown system system /sys/class/graphics/fb0/ratelimit
 
 on early-init
-    mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/emmc 0000 system system
+    mkdir /storage 0050 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    
     # for backwards compatibility
-    symlink /mnt/sdcard /sdcard
-    symlink /mnt/emmc /emmc
+    symlink /mnt/sdcard0 /sdcard
+    symlink /mnt/sdcard0 /mnt/sdcard
 
-    export EXTERNAL_STORAGE /mnt/sdcard
-    export SECONDARY_STORAGE /mnt/emmc
+    export EXTERNAL_STORAGE /storage/sdcard0
 
     device /dev/block/mmcblk0p16 0460 radio diag
 
@@ -95,6 +95,15 @@ on init
     symlink /mnt/sdcard/ext_sd /sdcard2
 
 on boot
+    # Chown polling nodes as needed from UI running on system server
+    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
+    chown system system /sys/devices/platform/msm_sdcc.1/polling
+    chown system system /sys/devices/platform/msm_sdcc.2/polling
+    chown system system /sys/devices/platform/msm_sdcc.3/polling
+    chown system system /sys/devices/platform/msm_sdcc.4/polling
     # bluetooth power up/down interface
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
@@ -104,15 +113,14 @@ on boot
     chown bluetooth bluetooth /sys/module/htc_bdaddress/parameters/bdaddress
     setprop ro.bt.bdaddr_path /sys/module/htc_bdaddress/parameters/bdaddress
 
-# symlink for HDMI
-    symlink /dev/graphics/fb1 /dev/graphics/hdmi
-
 # +HTC_RIL: from QCT Fusion
     mkdir /data/radio 0770 radio radio
     chown radio system /sys/module/smd_rpcrouter/parameters/debug_mask
     chown radio system /sys/module/rpcrouter_sdio_xprt/parameters/debug_mask
 # -HTC_RIL: from QCT Fusion
 
+    # wifi
+    mkdir /data/misc 1771 system misc
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
@@ -266,7 +274,18 @@ service iprenew_p2p /system/bin/dhcpcd -n
 	class main
 	disabled
 	oneshot
-
+	
+	
+	
+service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
+    user root
+    group wifi inet
+    socket wpa_wlan0 dgram 0660 wifi wifi
+    disabled
+    oneshot
+    
+    
+    
 # for USB internet sharing
 service udhcpd /system/bin/udhcpd
 	disabled
@@ -334,16 +353,18 @@ service netmgrd /system/bin/netmgrd
 
 service hdmid /system/bin/hdmid
     class late_start
-    socket hdmid stream 0660 root system graphics
-    disabled
-
-on property:ro.hdmi.enable=true
-    start hdmid
+    socket displayd stream 0660 root system graphics
 
 service htcbatt /system/bin/htcbatt
     class late_start
     user root
-
+service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/misc/wifi/wpa_supplicant.conf
+    user root
+    group wifi inet
+    socket wpa_wlan0 dgram 660 wifi wifi
+    disabled
+    oneshot
+    
 service thermald /system/bin/thermald
     class main
     user root
